# Algorithms

./: .gitignore  readme.md
projects/Hello/: CMakeLists.txt
projects/Hello/src/: hello.cpp
projects/Sum/: CMakeLists.txt
projects/Sum/src/: CMakeLists.txt  Sum.cpp  Sum.h
projects/Sum/tests/: CMakeLists.txt  Sum-test.cpp
projects/mean/: CMakeLists.txt  mainapp.cpp
projects/mean/modules/: CMakeLists.txt  calculations.cpp  calculations.h
src/Hello/: CMakeLists.txt
